--- a/firstgame.html
+++ b/firstgame.html
@@ -47,7 +47,7 @@
           <input type="button" value="click!!" class="btn_click" id="sixth_button">
           <input type="button" value="click!!" class="btn_click" id="seventh_button">
           <input type="button" value="시작하기" class="start_button" id="start_button"><br>
-          <img src="pictures/a.jpg"><br>
+          <img src="pictures/a.jpg" alt=""><br>
           <audio id="audio">
             <source src="./mp3/무궁화.mp3" type="audio/mpeg">
           </audio>
