--- a/intro.html
+++ b/intro.html
@@ -22,7 +22,7 @@
       <div id="title">소개</div>
     </nav>
     <div id="youtube">
-      <iframe src="https://www.youtube.com/embed/CZpl1qHXFqI?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/CZpl1qHXFqI?autoplay=1&mute=1" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <script src="./script.js"></script>
@@ -31,5 +31,5 @@
 
 <!--
   navigation과 관련된 부분은 https://www.youtube.com/watch?v=gXkqy0b4M5g&t=748s
-  영상을 참고해서 기본적인 틀을 다졌고, 필요한 부분들(컴포넌트 위치, 색, 크기, 속도 등)
+  영상을 참고해서 기본적인 틀을 다졌고, 필요한 부분들(컴포넌트 위치, 색, 크기, 속도 등)을 변경하고 추가하였음
 -->
