--- a/introgame.html
+++ b/introgame.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./game.css">
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
   <body>
@@ -24,7 +23,7 @@
       </div>
     </nav>
     <div id="i">
-      <img src="./pictures/invite.jpg" id="invite">
+      <img src="./pictures/invite.jpg" id="invite" alt="">
     </div>
 
     <div id="inv">
@@ -40,7 +39,6 @@
       </div>
       <div>
         <input type="button" value="네" class="y_n_button" id="y_button">
-
         <input type="button" value="아니오" class="y_n_button" id="n_button">
       </div>
     </div>
