--- a/secondgame.html
+++ b/secondgame.html
@@ -41,10 +41,10 @@
           </div>
       </div>
       <div class="select">
-        <img src="./pictures/circle.png">
-        <img src="./pictures/triangle.png">
-        <img src="./pictures/star.png">
-        <canvas id="myCanvas" style="background-color:aliceblue" width="400" height="400">
+        <img src="./pictures/circle.png" alt="">
+        <img src="./pictures/triangle.png" alt="">
+        <img src="./pictures/star.png" alt="">
+        <canvas id="myCanvas" style="background-color:aliceblue" width="400" height="400"></canvas>
       </div>
       <div id="button"><button type="button" id="submit">제출</button></div>
     <script src="./script.js"></script>
