--- a/person.html
+++ b/person.html
@@ -32,9 +32,9 @@
           <div class="slide_box">
             <div class="slide_list clearfix">
               <div class="slide_content slide01">
-                <div id="box-shadow">
+                <div class="box-shadow">
                   <div class="sb name">성기훈</div>
-                  <div class="sb"> 구조조정<img src="./pictures/성기훈.jpg"> 실직</div>
+                  <div class="sb"> 구조조정<img src="./pictures/성기훈.jpg" alt=""> 실직</div>
                   <div class="sb">이혼 &nbsp; &nbsp; 무기력 &nbsp; &nbsp; 도박</div>
                   <div class="sb">
                     어머니 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 456번
@@ -45,9 +45,9 @@
                 </div>
               </div>
               <div class="slide_content slide02">
-                <div id="box-shadow">
+                <div class="box-shadow">
                   <div class="sb name">조상우</div>
-                  <div class="sb"> 투자실패<img src="./pictures/조상우.jpg"> 대기업</div>
+                  <div class="sb"> 투자실패<img src="./pictures/조상우.jpg" alt=""> 대기업</div>
                   <div class="sb">서울대 &nbsp; &nbsp; 빚더미 &nbsp; &nbsp; 기훈과 동네후배</div>
                   <div class="sb">
                     판단력 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 냉철함
@@ -58,9 +58,9 @@
                 </div>
               </div>
               <div class="slide_content slide03">
-                <div id="box-shadow">
+                <div class="box-shadow">
                   <div class="sb name">오일남</div>
-                  <div class="sb"> 치매증상<img src="./pictures/오일남.jpg"> 뇌종양</div>
+                  <div class="sb"> 치매증상<img src="./pictures/오일남.jpg" alt=""> 뇌종양</div>
                   <div class="sb">&nbsp; &nbsp; 시한부 &nbsp; &nbsp; 명대사</div>
                   <div class="sb">
                     &nbsp; 게임을 즐김..? &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 복선
@@ -71,9 +71,9 @@
                 </div>
               </div>
               <div class="slide_content slide04">
-                <div id="box-shadow">
+                <div class="box-shadow">
                   <div class="sb name">강새벽</div>
-                  <div class="sb"> 소매치기<img src="./pictures/강새벽.jpg"> 냉정</div>
+                  <div class="sb"> 소매치기<img src="./pictures/강새벽.jpg" alt=""> 냉정</div>
                   <div class="sb"> 인간성..? &nbsp; &nbsp; 빚더미 &nbsp; &nbsp; 새터민</div>
                   <div class="sb">
                     북에 있는 부모님 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 보육원에 있는 동생
@@ -84,9 +84,9 @@
                 </div>
               </div>
               <div class="slide_content slide05">
-                <div id="box-shadow">
+                <div class="box-shadow">
                   <div class="sb name">장덕수</div>
-                  <div class="sb"> 무자비<img src="./pictures/장덕수.jpg"> 조폭</div>
+                  <div class="sb"> 무자비<img src="./pictures/장덕수.jpg" alt=""> 조폭</div>
                   <div class="sb">조직으로부터 수배령 &nbsp; &nbsp; &nbsp; &nbsp; 살인</div>
                   <div class="sb">
                     소매치기 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 새벽과의 관계
@@ -97,9 +97,9 @@
                 </div>
               </div>
               <div class="slide_content slide06">
-                <div id="box-shadow">
+                <div class="box-shadow">
                   <div class="sb name">한미녀</div>
-                  <div class="sb"> 생존능력<img src="./pictures/한미녀.jpg"> 거짓말</div>
+                  <div class="sb"> 생존능력<img src="./pictures/한미녀.jpg" alt=""> 거짓말</div>
                   <div class="sb">사기전과만 5범 &nbsp; &nbsp; 흡연 &nbsp; &nbsp; 기훈과 동네후배</div>
                   <div class="sb">
                     깍두기? &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 변명 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 욕
@@ -110,9 +110,9 @@
                 </div>
               </div>
               <div class="slide_content slide07">
-                <div id="box-shadow">
+                <div class="box-shadow">
                   <div class="sb name">알리 압둘</div>
-                  <div class="sb"> 파키스탄<img src="./pictures/알리.jpg"> 산재</div>
+                  <div class="sb"> 파키스탄<img src="./pictures/알리.jpg" alt=""> 산재</div>
                   <div class="sb">코리안 드림 &nbsp; &nbsp; &nbsp; &nbsp; 도피 &nbsp; &nbsp;</div>
                   <div class="sb">
                     괴력 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 사람을 믿음
@@ -144,5 +144,5 @@
 
 <!--
   https://codepen.io/kkt9102/pen/XWXbqKV을 참고하여 등장인물의 버튼 클릭
-  슬라이드를 참고함(크기와 위치, 배경 색 등만 변경)
+  슬라이드를 구현함(크기와 위치, 배경 색 등만 변경)
 -->
